--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,28 @@
+# remap prefix to Control + a
+# set -g prefix C-a
+# bind 'C-a C-a' to type 'C-a'
+# bind C-a send-prefix
+# unbind C-b
+
+# set terminal to use 256 colors
+set -g default-terminal "screen-256color"
+
+# scrollback history size
+set -g history-limit 10000
+
+# set window and pane start index to 1
+set -g base-index 1
+setw -g pane-base-index 1
+
+# renumber windows so we always have contiguous numbers
+set -g renumber-windows on
+
+# set currently running program as window title
+setw -g automatic-rename on
+
+# explicitly disable mouse control
+set -g mouse off
+
 # Activity monitoring
 setw -g monitor-activity on
 set -g visual-activity on
@@ -6,5 +31,5 @@ set -g visual-activity on
 bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
 
 # status bar
-set-option -g status-utf8 on
+# set-option -g status-utf8 on
 
