--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,6 +7,9 @@
 # set terminal to use 256 colors
 set -g default-terminal "screen-256color"
 
+# Make shift+arrows, ctrl+arrows etc work in Vim.
+set -g xterm-keys on
+
 # scrollback history size
 set -g history-limit 10000
 
