--- a/.screenrc
+++ b/.screenrc
@@ -31,3 +31,5 @@ bindkey "^k" eval "copy" "stuff k"    # enter copy mode and move up one line
 bindkey -m "^[k" stuff ^b             # move up one page
 bindkey -m "^k" stuff k               # move up one line
 
+# use utf-8 or screen -U
+defutf8 on
