set bigger history

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -33,6 +33,8 @@ set -g visual-activity on
 # reload config
 bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
 
+set -g history-limit 999999
+
 # status bar
 # set-option -g status-utf8 on
 
